[package]
name = "scut-drcom-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11"
hex = "0.4.3"
log = "0.4.22"
md5 = "0.7.0"
pnet = "0.35.0"
pnet_datalink = "0.35.0"
smoltcp = "0.12.0"
thiserror = "1.0"
ctrlc = { version = "3.4", features = ["termination"] }
